--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
   background-color: gainsboro;
   margin: 0;
@@ -5,5 +8,4 @@ body {
 
 .App {
   text-align: center;
-  margin: 10px;
 }
