--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,6 +4,7 @@
   padding: 24px 36px;
   align-items: center;
   background-color: #ffffff;
+  border-bottom: 1px solid #d9d9d6;
 }
 
 .headerTabs {
