--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -9,20 +9,21 @@
   box-shadow: 1px 2px 13px rgba(0, 0, 0, 0.1);
 }
 
-.navHeader {
-  display: flex;
-  justify-content: space-between;
-  gap: 4px;
-  align-items: center;
-}
-
-.navHeaderTitle {
+.navMenuItem {
   display: flex;
   padding: 12px 10px;
   font-size: 14px;
   line-height: 14px;
-  border: 2px solid red;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
+}
+
+.navMenuItemName {
+  display: flex;
   gap: 4px;
+}
+
+.divider {
+  border-top: 1px solid #d9d9d6;
+  margin-bottom: 0px;
 }
