--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,14 @@
 * {
   box-sizing: border-box;
-}
-body,
-html {
-  background-color: gainsboro;
   margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: gainsboro;
+  height: 100vh;
   font-family: Inter;
   font-weight: 500;
   color: #2b2b2b;
+  display: flex;
 }
