--- a/src/components/CollectionDetail/CollectionDetail.module.css
+++ b/src/components/CollectionDetail/CollectionDetail.module.css
@@ -14,6 +14,15 @@
   gap: 16px;
 }
 
+.addCollectionItem {
+  border: 1px solid #d9d9d6;
+  border-radius: 12px;
+  background-color: #f1f1ee;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .collectionDetailItemToolbar {
   display: flex;
   justify-content: space-between;
