--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,10 +1,11 @@
 .home {
-  border: 2px solid white;
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 .main {
   display: flex;
+  height: 100%;
   padding: 24px 36px;
   gap: 20px;
   background-color: #fbfbf9;
