--- a/src/components/CollectionDetail/CollectionDetail.module.css
+++ b/src/components/CollectionDetail/CollectionDetail.module.css
@@ -3,6 +3,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 20px;
   overflow: auto;
+  margin-bottom: 100px;
 }
 
 .collectionDetailItemCard {
@@ -13,6 +14,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  min-height: 150px;
 }
 
 .addCollectionItem {
@@ -22,6 +24,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  min-height: 150px;
 }
 
 .collectionDetailItemToolbar {
