--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  width: 100vw;
+  flex: 1;
+  border: 1px solid red;
+  overflow: hidden;
 }
 .main {
   display: flex;
@@ -9,6 +13,8 @@
   padding: 24px 36px;
   gap: 20px;
   background-color: #fbfbf9;
+  width: 100%;
+  flex: 1;
 }
 
 .main nav {
